deploy/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ott-app
    role: production
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "ott-app"
    tags.datadoghq.com/version: "1.0.0"
  name: production-ott-app
spec:
  replicas: 3
  selector:
    matchLabels:
      role: production
  template:
    metadata:
      labels:
        role: production
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "ott-app"
        tags.datadoghq.com/version: "1.0.0"
    spec:
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - production
      containers:
        - name: ott-app
          image: how0326/ott_service:18
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
