deploy/production_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-svc-lb
  labels:
    app: ott-app-service
    k8s-app: ott-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
spec:
  type: LoadBalancer
  selector:
    role: production
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "ott-app"
    tags.datadoghq.com/version: "1.0.0"
  ports:
   - port: 80
     targetPort: 8080
